Added multi-line text overflow to '.section-read-links .text-main' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-topics.html
+++ b/BeginnersPad v2/view-topics.html
@@ -48,8 +48,8 @@
         <div class="container">
             <div class="list">
                 <div class="item">
-                    <h3>Listing a property - Get started</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
+                    <h3 class="title-main">Listing a property - Get started</h3>
+                    <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
                     totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
                     consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
                     aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
@@ -59,8 +59,8 @@
                     <a href="#">Read full <i class="fas fa-chevron-right"></i></a>
                 </div>
                 <div class="item">
-                    <h3>Choosing a new house - Get started</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
+                    <h3 class="title-main">Choosing a new house - Get started</h3>
+                    <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
                         totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
                         consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
                         aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
@@ -70,8 +70,8 @@
                     <a href="#">Read full <i class="fas fa-chevron-right"></i></a>
                 </div>
                 <div class="item">
-                    <h3>Waiting list - Get started</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
+                    <h3 class="title-main">Waiting list - Get started</h3>
+                    <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
                         totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
                         consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
                         aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
@@ -81,8 +81,8 @@
                     <a href="#">Read full <i class="fas fa-chevron-right"></i></a>
                 </div>
                 <div class="item">
-                    <h3>Listing a property - Get started</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
+                    <h3 class="title-main">Listing a property - Get started</h3>
+                    <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
                         totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
                         consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
                         aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
@@ -92,8 +92,8 @@
                     <a href="#">Read full <i class="fas fa-chevron-right"></i></a>
                 </div>
                 <div class="item">
-                    <h3>Choosing a new house - Get started</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
+                    <h3 class="title-main">Choosing a new house - Get started</h3>
+                    <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
                         totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
                         consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
                         aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
@@ -103,8 +103,8 @@
                     <a href="#">Read full <i class="fas fa-chevron-right"></i></a>
                 </div>
                 <div class="item">
-                    <h3>Waiting list - Get started</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
+                    <h3 class="title-main">Waiting list - Get started</h3>
+                    <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
                         totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
                         consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
                         aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
