--- a/BeginnersPad v2/view-topics.html
+++ b/BeginnersPad v2/view-topics.html
@@ -30,6 +30,8 @@
         </ul>
     </nav>
 
+    <h3 class="section-title">Topics</h3>
+
     <!-- Search bar -->
     <section id="search-bar">
         <div class="container">
@@ -44,7 +46,7 @@
         </div>
     </section>
 
-    <section class="section-read-links">
+    <section class="section-read links">
         <div class="container">
             <div class="list">
                 <div class="item">
