--- a/BeginnersPad v2/view-faqs.html
+++ b/BeginnersPad v2/view-faqs.html
@@ -30,9 +30,9 @@
         </ul>
     </nav>
 
-    <section class="section-faqs">
+    <section class="section-read">
         <div class="container">
-            <div class="faqs">
+            <div class="list">
                 <h3 class="section-title">Frequently asked questions</h3>
                 <div class="item">
                     <h4>What is Beginners Pad?</h4>
