--- a/BeginnersPad v2/view-tickets-user.html
+++ b/BeginnersPad v2/view-tickets-user.html
@@ -31,7 +31,7 @@
     </nav>
 
     <section>
-        <div class="section-read-links">
+        <div class="section-read links">
             <div class="container">
                 <h3 class="section-title">Tickets</h3>
                 <div class="panel-grp">
@@ -104,7 +104,16 @@
                         </div>
                     </div>
                     <div class="panel">
-                        
+                        <div class="tickets-categories-user">
+                            <h3>Categories</h3>
+                            <div class="btn-grp vertical">
+                                <button class="selected">All</button>
+                                <button>Pending</button>
+                                <button>Resolved</button>
+                                <button>Open</button>
+                                <button>Closed</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
