Disabled 'footer' in 'sign-up.html' and 'sign-in.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/sign-up.html
+++ b/BeginnersPad v2/sign-up.html
@@ -89,8 +89,8 @@
     </section>
 
     <!-- Footer -->
-    <footer>
+    <!-- <footer>
         <p>&copy; 2021 Beginners Pad</p>
-    </footer>
+    </footer> -->
 </body>
 </html>
