--- a/BeginnersPad v2/sign-in.html
+++ b/BeginnersPad v2/sign-in.html
@@ -61,8 +61,8 @@
     </section>
 
     <!-- Footer -->
-    <footer class="page-min-height">
+    <!-- <footer class="page-min-height">
         <p>&copy; 2021 Beginners Pad</p>
-    </footer>
+    </footer> -->
 </body>
 </html>
