--- a/BeginnersPad v2/index.html
+++ b/BeginnersPad v2/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/default-theme.css">
     <link rel="stylesheet" href="styles/utilities.css">
+    <link rel="stylesheet" href="styles/queries.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Beginners Pad</title>
 </head>
@@ -147,7 +148,7 @@
     </section>
 
     <!-- Marketing -->
-    <section id="marketing">
+    <section id="section-marketing">
         <div class="container">
             <h3 class="section-title">Why choose beginners pad?</h3>
             <div class="marketing-item">
