Added media queries for 'index.html' for 'max-width: 768px' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/index.html
+++ b/BeginnersPad v2/index.html
@@ -170,7 +170,7 @@
     </section>
 
     <!-- Links -->
-    <section id="links">
+    <section id="section-links">
         <!-- Social media links -->
         <div class="social">
             <a href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
