--- a/BeginnersPad v2/index.html
+++ b/BeginnersPad v2/index.html
@@ -56,9 +56,9 @@
                         <div class="image">
                             <img src="images/logo.png" alt="">
                         </div>
-                        <div class="card-info">
-                            <h4>Name</h4>
-                            <p class="location">Location</p>
+                        <div class="card-info txt-single-line">
+                            <h4 class="txt-single-line">Name</h4>
+                            <p class="location txt-single-line">Location</p>
                             <p class="type">Listing type</p>
                             <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
@@ -71,9 +71,9 @@
                         <div class="image">
                             <img src="images/logo.png" alt="">
                         </div>
-                        <div class="card-info">
-                            <h4>Name</h4>
-                            <p class="location">Location</p>
+                        <div class="card-info txt-single-line">
+                            <h4 class="txt-single-line">Name</h4>
+                            <p class="location txt-single-line">Location</p>
                             <p class="type">Listing type</p>
                             <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
@@ -86,9 +86,9 @@
                         <div class="image">
                             <img src="images/logo.png" alt="">
                         </div>
-                        <div class="card-info">
-                            <h4>Name</h4>
-                            <p class="location">Location</p>
+                        <div class="card-info txt-single-line">
+                            <h4 class="txt-single-line">Name</h4>
+                            <p class="location txt-single-line">Location</p>
                             <p class="type">Listing type</p>
                             <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
@@ -101,9 +101,9 @@
                         <div class="image">
                             <img src="images/logo.png" alt="">
                         </div>
-                        <div class="card-info">
-                            <h4>Name</h4>
-                            <p class="location">Location</p>
+                        <div class="card-info txt-single-line">
+                            <h4 class="txt-single-line">Name</h4>
+                            <p class="location txt-single-line">Location</p>
                             <p class="type">Listing type</p>
                             <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
@@ -116,9 +116,9 @@
                         <div class="image">
                             <img src="images/logo.png" alt="">
                         </div>
-                        <div class="card-info">
-                            <h4>Name</h4>
-                            <p class="location">Location</p>
+                        <div class="card-info txt-single-line">
+                            <h4 class="txt-single-line">Name</h4>
+                            <p class="location txt-single-line">Location</p>
                             <p class="type">Listing type</p>
                             <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
@@ -131,9 +131,9 @@
                         <div class="image">
                             <img src="images/logo.png" alt="">
                         </div>
-                        <div class="card-info">
-                            <h4>Name</h4>
-                            <p class="location">Location</p>
+                        <div class="card-info txt-single-line">
+                            <h4 class="txt-single-line">Name</h4>
+                            <p class="location txt-single-line">Location</p>
                             <p class="type">Listing type</p>
                             <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
