Added 'css-base.js' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/index.html
+++ b/BeginnersPad v2/index.html
@@ -15,6 +15,7 @@
     <!-- Navbar -->
     <nav>
         <h1><a href="index.html">Beginners Pad</a></h1>
+        <i class="fas fa-bars fa-2x toggle"></i>
         <ul class="nav-menu">
             <div class="badge">
                 <span class="badge-mark"></span>
@@ -194,5 +195,6 @@
     <footer>
         <p>&copy; 2021 Beginners Pad</p>
     </footer>
+    <script src="js/css-base.js"></script>
 </body>
 </html>
