Added reference to 'css-base.js' in all present .html files in 'Beginners Pad v2'.

--- a/BeginnersPad v2/sign-in.html
+++ b/BeginnersPad v2/sign-in.html
@@ -64,5 +64,6 @@
     <!-- <footer class="page-min-height">
         <p>&copy; 2021 Beginners Pad</p>
     </footer> -->
+    <script src="js/css-base.js"></script>
 </body>
 </html>
