--- a/BeginnersPad v2/view-listing.html
+++ b/BeginnersPad v2/view-listing.html
@@ -417,5 +417,6 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjtXueHrMV4qUXj0tdwD0dvCqxgM3mKds&callback=initMap">
     </script>
     <script src="/js/maps-view-listing.js"></script>
+    <script src="js/css-base.js"></script>
 </body>
 </html>
