--- a/BeginnersPad v2/view-ticket-user.html
+++ b/BeginnersPad v2/view-ticket-user.html
@@ -54,5 +54,6 @@
     <!-- <footer>
         <p>&copy; 2021 Beginners Pad</p>
     </footer> -->
+    <script src="js/css-base.js"></script>
 </body>
 </html>
