--- a/BeginnersPad v2/view-listing-reviews.html
+++ b/BeginnersPad v2/view-listing-reviews.html
@@ -180,5 +180,6 @@
     <footer>
         <p>&copy; 2021 Beginners Pad</p>
     </footer>
+    <script src="js/css-base.js"></script>
 </body>
 </html>
