--- a/BeginnersPad v2/view-listings.html
+++ b/BeginnersPad v2/view-listings.html
@@ -262,5 +262,6 @@
     </footer>
 
     <script src="js/search-bar-scroll.js"></script>
+    <script src="js/css-base.js"></script>
 </body>
 </html>
