--- a/BeginnersPad v2/view-topics.html
+++ b/BeginnersPad v2/view-topics.html
@@ -124,5 +124,6 @@
         <p>&copy; 2021 Beginners Pad</p>
     </footer>
     <script src="js/search-bar-scroll.js"></script>
+    <script src="js/css-base.js"></script>
 </body>
 </html>
