--- a/BeginnersPad v2/view-listings.html
+++ b/BeginnersPad v2/view-listings.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/default-theme.css">
     <link rel="stylesheet" href="styles/utilities.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/queries.css">
     <title>Beginners Pad</title>
 </head>
 <body>
