Added media queries for 'view-listing-reviews.html' for all dimensions in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-listing-reviews.html
+++ b/BeginnersPad v2/view-listing-reviews.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/default-theme.css">
     <link rel="stylesheet" href="styles/utilities.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/queries.css">
     <title>Beginners Pad</title>
 </head>
 <body>
@@ -35,8 +36,8 @@
             <div class="header-grp">
                 <div class="thumb"></div>
                 <div class="details">
-                    <h3>Listing name</h3>
-                    <div class="location">
+                    <h3 class="txt-single-line">Listing name</h3>
+                    <div class="location txt-single-line">
                         <span class="spec">Location,</span>
                         <span class="spec">Location,</span>
                         <span class="spec">Location</span>
@@ -149,6 +150,10 @@
                         <p class="time">4 hours ago</p>
                         <h3 class="occupant">Verified occupant</h3>
                         <p class="reveiw">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil et voluptatum veniam fugit unde ipsum illo est, officiis
+                        harum? Porro molestias atque commodi ullam ea explicabo dicta minus soluta doloribus facilis, enim ipsum eveniet amet
+                        dolores quidem distinctio ipsam adipisci laborum ut? Quae omnis cupiditate illum iusto nesciunt itaque excepturi optio
+                        sed, in ratione odit quasi pariatur architecto vero, placeat laboriosam illo sit non! Architecto officia recusandae
+                        veniam atque ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil et voluptatum veniam fugit unde ipsum illo est, officiis
                         harum? Porro molestias atque commodi ullam ea explicabo dicta minus soluta doloribus facilis, enim ipsum eveniet amet
                         dolores quidem distinctio ipsam adipisci laborum ut? Quae omnis cupiditate illum iusto nesciunt itaque excepturi optio
                         sed, in ratione odit quasi pariatur architecto vero, placeat laboriosam illo sit non! Architecto officia recusandae
