--- a/BeginnersPad v2/view-faqs.html
+++ b/BeginnersPad v2/view-faqs.html
@@ -15,7 +15,8 @@
     <!-- Navbar -->
     <nav>
         <h1><a href="index.html">Beginners Pad</a></h1>
-        <ul class="nav-menu">
+        <i id="navToggle" class="fas fa-bars fa-2x toggle"></i>
+        <ul id="navMenu" class="nav-menu">
             <div class="badge">
                 <span class="badge-mark"></span>
                 <li><a href="help.html"><i class="fas fa-question-circle"></i> Help</a></li>
