Added media queries for 'help.html' for all dimensions in 'Beginners Pad v2'.

--- a/BeginnersPad v2/help.html
+++ b/BeginnersPad v2/help.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/default-theme.css">
     <link rel="stylesheet" href="styles/utilities.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/queries.css">
     <title>Beginners Pad</title>
 </head>
 <body>
@@ -131,7 +132,7 @@
     </section>
 
     <!-- Links -->
-    <section id="links">
+    <section id="section-links">
         <!-- Social media links -->
         <div class="social">
             <a href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
