Added media queries for 'view-tickets-user.html' for all dimensions in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-tickets-user.html
+++ b/BeginnersPad v2/view-tickets-user.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/default-theme.css">
     <link rel="stylesheet" href="styles/utilities.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/queries.css">
     <title>Beginners Pad</title>
 </head>
 <body>
@@ -30,7 +31,7 @@
         </ul>
     </nav>
 
-    <section class="section-read links">
+    <section class="section-read links" id="tickets-user-list">
         <div class="container">
             <h3 class="section-title">Tickets</h3>
             <div class="panel-grp">
