--- a/BeginnersPad v2/sign-in.html
+++ b/BeginnersPad v2/sign-in.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="styles/utilities.css">
     <link rel="stylesheet" href="styles/queries.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/queries.css">
     <title>Beginners Pad</title>
 </head>
 <body>
     <!-- Navbar -->
     <nav>
         <h1><a href="index.html">Beginners Pad</a></h1>
-        <ul class="nav-menu">
+        <i id="navToggle" class="fas fa-bars fa-2x toggle"></i>
+        <ul id="navMenu" class="nav-menu">
             <div class="badge">
                 <span class="badge-mark"></span>
                 <li><a href="help.html"><i class="fas fa-question-circle"></i> Help</a></li>
