--- a/BeginnersPad v2/beginner/dashboard.html
+++ b/BeginnersPad v2/beginner/dashboard.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../styles/dashmin.css">
+    <link rel="stylesheet" href="../styles/default-theme.css">
     <title>Dashmin - Simple Dashboard</title>
 </head>
 <body>
@@ -83,7 +84,7 @@
     </nav>
 
     <!-- Main area -->
-    <section id="dsmSectionMain" class="nav-open">
+    <section id="dsmSectionMain" class="section-main nav-open">
         <div class="container">
             <div class="label">
                 <p>Live Feed</p>
