Added logic to 'nav-drawer.js' for '.nav-drawer' control in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/dashboard.html
+++ b/BeginnersPad v2/beginner/dashboard.html
@@ -24,9 +24,9 @@
             </div>
             <div class="badge">
                 <span class="badge-mark"></span>
-                <li><a href="sign-in.html"><i class="fas fa-user-circle"></i> Account</a></li>
+                <li><a href="#"><i class="fas fa-user-circle"></i> Account</a></li>
             </div>
-            <div class="badge">
+            <div class="badge" id="navDrawerOpen">
                 <span class="badge-mark"></span>
                 <li><i class="fas fa-bars"></i></li>
             </div>
@@ -43,9 +43,9 @@
         <i id="navDrawerClose" class="fas fa-times fa-2x"></i>
         <div class="nav-drawer-category">
             <ul>
-                <li><a href=""><i class="fas fa-question-circle"></i> Help</li>
-                <li><a href=""><i class="fas fa-user-circle"></i> Manage account</a></li>
-                <li><a href=""><i class="fas fa-sign-out-alt"></i> Sign out</a></li>
+                <li><a href="../help.html"><i class="fas fa-question-circle"></i> Help</li>
+                <li><a href="#"><i class="fas fa-user-circle"></i> Manage account</a></li>
+                <li><a href="../sign-in.html"><i class="fas fa-sign-out-alt"></i> Sign out</a></li>
             </ul>
         </div>
         <div class="nav-drawer-category">
@@ -54,10 +54,15 @@
                 <li><a href="#">Dashboard</a></li>
                 <li><a href="#">Listings</a></li>
                 <li><a href="#">My reviews</a></li>
-                <li><a href="#">Waiting list <i class="fas fa-star"></i></a></li>
                 <li><a href="#">Favourites</a></li>
                 <li><a href="#">Property history</a></li>
                 <li><a href="#">My tickets</a></li>
+            </ul>
+        </div>
+        <div class="nav-drawer-category">
+            <p>Premium</p>
+            <ul>
+                <li><a href="#">Waiting list <i class="fas fa-star"></i></a></li>
             </ul>
         </div>
     </div>
