Added 'body.unfocused' to 'styles.css' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/dashboard.html
+++ b/BeginnersPad v2/beginner/dashboard.html
@@ -34,9 +34,7 @@
     </nav>
 
     <!-- Filler -->
-    <div id="pageFiller">
-
-    </div>
+    <div id="pageFiller"></div>
 
     <!-- Nav drawer -->
     <div class="nav-drawer closed" id="navDrawer">
@@ -52,7 +50,7 @@
             <p>Menu</p>
             <ul>
                 <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Listings</a></li>
+                <li class="selected"><a href="#">Listings</a></li>
                 <li><a href="#">My reviews</a></li>
                 <li><a href="#">Favourites</a></li>
                 <li><a href="#">Property history</a></li>
