--- a/BeginnersPad v2/beginner/dashboard.html
+++ b/BeginnersPad v2/beginner/dashboard.html
@@ -49,12 +49,12 @@
         <div class="nav-drawer-category">
             <p>Menu</p>
             <ul>
-                <li><a href="#">Dashboard</a></li>
-                <li class="selected"><a href="#">Listings</a></li>
-                <li><a href="#">My reviews</a></li>
-                <li><a href="#">Favourites</a></li>
-                <li><a href="#">Property history</a></li>
-                <li><a href="#">My tickets</a></li>
+                <li class="selected"><a href="/beginner/dashboard.html">Dashboard</a></li>
+                <li><a href="/beginner/view-listing.html">Listings</a></li>
+                <li><a href="/beginner/my-reviews.html">My reviews</a></li>
+                <li><a href="/beginner/favourites.html">Favourites</a></li>
+                <li><a href="/beginner/property-history.html">Property history</a></li>
+                <li><a href="/beginner/my-tickets.html">My tickets</a></li>
             </ul>
         </div>
         <div class="nav-drawer-category">
