--- a/BeginnersPad v2/beginner/view-listing-unit.html
+++ b/BeginnersPad v2/beginner/view-listing-unit.html
@@ -17,7 +17,7 @@
     <nav>
         <h1><a href="index.html">Beginners Pad</a></h1>
         <i id="navToggle" class="fas fa-bars fa-2x toggle"></i>
-        <ul id="navMenu" class="nav-menu">
+        <ul id="navMenu" class="nav-menu authed">
             <div class="badge">
                 <span class="badge-mark"></span>
                 <li><a href="help.html"><i class="fas fa-question-circle"></i> Help</a></li>
