Added minor adjustments to 'view-listing-unit.html' and 'view-listing-unit-occupied.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/view-listing-unit-occupied.html
+++ b/BeginnersPad v2/beginner/view-listing-unit-occupied.html
@@ -47,7 +47,7 @@
             <p>Menu</p>
             <ul>
                 <li><a href="/beginner/dashboard.html">Dashboard</a></li>
-                <li class="selected"><a href="/beginner/view-listing.html">Listings</a></li>
+                <li><a href="/beginner/view-listing.html">Listings</a></li>
                 <li><a href="/beginner/my-reviews.html">My reviews</a></li>
                 <li><a href="/beginner/favourites.html">Favourites</a></li>
                 <li><a href="/beginner/property-history.html">Property history</a></li>
