--- a/BeginnersPad v2/beginner/view-listing-unit.html
+++ b/BeginnersPad v2/beginner/view-listing-unit.html
@@ -50,7 +50,7 @@
             <p>Menu</p>
             <ul>
                 <li><a href="/beginner/dashboard.html">Dashboard</a></li>
-                <li class="selected"><a href="/beginner/view-listing.html">Listings</a></li>
+                <li><a href="/beginner/view-listing.html">Listings</a></li>
                 <li><a href="/beginner/my-reviews.html">My reviews</a></li>
                 <li><a href="/beginner/favourites.html">Favourites</a></li>
                 <li><a href="/beginner/property-history.html">Property history</a></li>
@@ -135,6 +135,9 @@
                                 <button class="btn-link">Request tour</button>
                             </div>
                         </div>
+                    </div>
+                    <div class="section-more">
+                        <a href="/beginner/view-listing-unit-occupied.html">Preview occupied listing as occupant <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
                 <div class="panel">
