Added additional HTML markup to 'view-listing-unit-occupied.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/view-listing-unit-occupied.html
+++ b/BeginnersPad v2/beginner/view-listing-unit-occupied.html
@@ -149,6 +149,18 @@
                     </div>
                 </div>
                 <div class="panel">
+                    <div class="panel-sub">
+                        <h3>Your stats</h3>
+                        <div class="sub-grp">
+                            <ul>
+                                <li>Days occupied: <span class="days">0</span></li>
+                                <li>Months occupied: <span class="months">0</span></li>
+                                <li>Total rent paid: <span class="rent">KES 0.00</span></li>
+                                <li>Checked in on: <span class="moved-in">01-01-2021 00:00:00</span></li>
+                                <li>Checked out on: <span class="moved-in">n/a</span></li>
+                            </ul>
+                        </div>
+                    </div>
                     <div class="listing-units-list">
                         <h3>Property</h3>
                         <div class="listing-units-grp">
