Added media queries for all screen widths fro 'view-listing-unit-occupied.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/view-listing-unit-occupied.html
+++ b/BeginnersPad v2/beginner/view-listing-unit-occupied.html
@@ -62,7 +62,7 @@
         </div>
     </div>
 
-    <section class="showcase-small">
+    <section class="showcase-small" id="showcaseListingUnit">
         <div class="showcase-overlay success">
             <div class="container">
                 <div>
@@ -143,6 +143,7 @@
                                 <button class="btn-link">Contact lister</button>
                             </div>
                             <div class="item">
+                                <!-- <a href="#"><button class="btn-primary">Review listing</button></a> -->
                                 <button class="btn-primary">Review listing</button>
                             </div>
                         </div>
