Added 'view-listing-unit-pending.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/dashboard.html
+++ b/BeginnersPad v2/beginner/dashboard.html
@@ -50,7 +50,7 @@
             <p>Menu</p>
             <ul>
                 <li class="selected"><a href="/beginner/dashboard.html">Dashboard</a></li>
-                <li><a href="/beginner/view-listing-unit.html">Listings</a></li>
+                <li><a href="../view-listings.html">Listings</a></li>
                 <li><a href="/beginner/my-reviews.html">My reviews</a></li>
                 <li><a href="/beginner/favourites.html">Favourites</a></li>
                 <li><a href="/beginner/property-history.html">Property history</a></li>
