--- a/BeginnersPad v2/beginner/view-listing-unit.html
+++ b/BeginnersPad v2/beginner/view-listing-unit.html
@@ -128,7 +128,7 @@
                         <div class="apply-grp">
                             <div class="apply">
                                 <p>Like this house?</p>
-                                <button class="btn-primary">Apply now</button>
+                                <a href="/beginner/view-listing-unit-occupied.html"><button class="btn-primary">Apply now</button></a>
                             </div>
                             <div class="tour">
                                 <p>Still unsure?</p>
