Made changes to initial markup of '/beginner/favourites.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/favourites.html
+++ b/BeginnersPad v2/beginner/favourites.html
@@ -70,8 +70,9 @@
             <div class="favourites-grp">
                 <div class="fav unit">
                     <a href="/view-listing-unit.html">
+                        <div class="thumb"></div>
                         <div class="details">
-                            <h2>Unit title</h2>
+                            <h2 class="txt-single-line">Unit title</h2>
                             <div class="specs">
                                 <span class="spec">1 bed,</span>
                                 <span class="spec">2 bath,</span>
@@ -87,14 +88,14 @@
                             </div>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
-                        <div class="thumb"></div>
                     </a>
-                    <button class="btn-link fav-btn">x</button>
+                    <button class="btn-link btn-fav-close">x</button>
                 </div>
                 <div class="fav unit">
                     <a href="/view-listing-unit.html">
+                        <div class="thumb"></div>
                         <div class="details">
-                            <h2>Unit title</h2>
+                            <h2 class="txt-single-line">Unit title</h2>
                             <div class="specs">
                                 <span class="spec">1 bed,</span>
                                 <span class="spec">2 bath,</span>
@@ -110,15 +111,14 @@
                             </div>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
-                        <div class="thumb"></div>
                     </a>
-                    <button class="btn-link fav-btn">x</button>
+                    <button class="btn-link btn-fav-close">x</button>
                 </div>
                 <div class="fav listing">
                     <a href="/view-listing.html">
                         <div class="thumb"></div>
                         <div class="details">
-                            <h2>Listing name</h2>
+                            <h2 class="txt-single-line">Listing name</h2>
                             <div class="location">
                                 <span class="spec">Location,</span>
                                 <span class="spec">Location,</span>
@@ -137,12 +137,13 @@
                             </div>
                         </div>
                     </a>
-                    <button class="btn-link fav-btn">x</button>
+                    <button class="btn-link btn-fav-close">x</button>
                 </div>
                 <div class="fav unit">
                     <a href="/view-listing-unit.html">
+                        <div class="thumb"></div>
                         <div class="details">
-                            <h2>Unit title</h2>
+                            <h2 class="txt-single-line">Unit title</h2>
                             <div class="specs">
                                 <span class="spec">1 bed,</span>
                                 <span class="spec">2 bath,</span>
@@ -158,15 +159,14 @@
                             </div>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
-                        <div class="thumb"></div>
                     </a>
-                    <button class="btn-link fav-btn">x</button>
+                    <button class="btn-link btn-fav-close">x</button>
                 </div>
                 <div class="fav listing">
                     <a href="/view-listing.html">
                         <div class="thumb"></div>
                         <div class="details">
-                            <h2>Listing name</h2>
+                            <h2 class="txt-single-line">Listing name</h2>
                             <div class="location">
                                 <span class="spec">Location,</span>
                                 <span class="spec">Location,</span>
@@ -185,12 +185,12 @@
                             </div>
                         </div>
                     </a>
-                    <button class="btn-link fav-btn">x</button>
+                    <button class="btn-link btn-fav-close">x</button>
                 </div>
                 <div class="fav topic">
                     <a href="../view-topic.html">
-                        <h3 class="title-main">Listing a property - Get started</h3>
-                        <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
+                        <h3 class="title-main txt-single-line">Listing a property - Get started</h3>
+                        <p class="text-main txt-six-line">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
                         totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
                         consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
                         aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
@@ -198,7 +198,20 @@
                         asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
                         voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
                     </a>
-                    <button class="btn-link fav-btn">x</button>
+                    <button class="btn-link btn-fav-close">x</button>
+                </div>
+                <div class="fav topic">
+                    <a href="../view-topic.html">
+                        <h3 class="title-main txt-single-line">Listing a property - Get started</h3>
+                        <p class="text-main txt-six-line">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
+                        totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
+                        consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
+                        aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
+                        debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
+                        asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
+                        voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
+                    </a>
+                    <button class="btn-link btn-fav-close">x</button>
                 </div>
             </div>
         </div>
